# xc_xvcu_blocks_example

./: .gitignore  CMakeLists.txt  README.md  winbuild.cmd
blocks/example_block/src/: example_block.c  example_block.h
blocks/example_block/tests/: test_example_block.cpp
cmake/: xvcu_library.cmake
scripts/: block_gen.py
tests/: CMakeLists.txt  test-and-coverage.cmake
